# OopsQL

./: .gitignore  LICENSE  README.md  oopsql.yml  pyproject.toml
docs/: examples.md  index.html  roadmap.md  rules.md  styles.css
examples/: dangerous_delete.sql  dangerous_update.sql  nolock_report.sql  protected_table_change.sql  safe_update.sql
integrations/ssms-guard/: OopsQlGuardCommand.cs  README.md
scripts/: build-exe.sh  oopsql_cli.py
src/oopsql/: __init__.py  cli.py  config.py  formatter.py  models.py  rules.py  scanner.py  sqlserver.py  suggestions.py
tests/: test_cli.py  test_formatter.py  test_rules.py  test_scanner.py  test_sqlserver.py
